--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
-    "@supabase/ssr": "^0.7.0",
+    "@supabase/ssr": "0.5.2",
     "@supabase/supabase-js": "2.39.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
